--- a/react-app/package.json
+++ b/react-app/package.json
@@ -42,7 +42,8 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-react": "^7.25.9"
+    "@babel/core": "^7.16.0",
+    "@babel/runtime": "^7.16.0",
+    "babel-preset-react-app": "^10.0.0"
   }
 }
