update github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,49 +6,50 @@ on:
 
 jobs:
   BuildAndDeploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    # https://github.com/actions/setup-node
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+
+    - uses: actions/setup-node@v4
       with:
-        node-version: '16'
+        node-version: '20'
         cache: 'npm'
-        cache-dependency-path: react-app/package-lock.json
+        cache-dependency-path: |
+          react-app/package-lock.json
+          package-lock.json
+
     - name: Build React App
       working-directory: react-app
-      # CI=false allows the build to ignore any warnings when building
-      run: npm install && CI=false npm run build
+      run: |
+        npm ci
+        CI=false npm run build
 
-    # https://github.com/actions/setup-python
-    # If a student sees this, they could speed up their builds 
-    # by moving install from docker to cached GH action runner
-    # Have fun (after you have a passing project!) :) 
-    - uses: actions/setup-python@v3
+    - uses: actions/setup-python@v5
       with:
         python-version: '3.9'
         cache: 'pip'
-    - run: pip install pipenv
 
-    - name: Update requirements.txt for container install
-      run: pipenv requirements > requirements.txt
+    - name: Install Python dependencies
+      run: |
+        pip install pipenv
+        pipenv requirements > requirements.txt
 
     - name: Login to Heroku Container registry
-      env: 
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:login 
-
-    - name: Build Container and push
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web 
+      run: heroku container:login
 
-    - name: Release
+    - name: Build and push container
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web 
+      run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+
+    - name: Release container
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
 
     - name: Run DB Migration
       env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask db upgrade
