--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,30 @@
 # Dependencies
 node_modules/
+/react-app/node_modules/
+.pnp/
+.pnp.js
 package-lock.json
 yarn.lock
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+.flaskenv
 
 # Build outputs
-dist/
-build/
-coverage/
+/build/
+/react-app/build/
+/dist/
+*.pyc
+__pycache__/
+instance/
+
+# Database
+*.db
+*.sqlite3
 
 # Logs
 logs/
@@ -28,16 +41,26 @@ yarn-error.log*
 .DS_Store
 Thumbs.db
 
-# Python (keeping your existing Python ignores)
+# Python virtual environments
+.venv/
+venv/
+ENV/
+
+# Python cache
 __pycache__/
 *.py[cod]
-.venv
+*.so
 
 # Testing
 coverage/
+.coverage
+.pytest_cache/
 .nyc_output/
 
-# Optional: Misc
+# Misc
 .cache/
 .temp/
 .tmp/
+
+# AWS
+.aws/
