--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,9 @@
-# Dependencies
-node_modules/
-package-lock.json
-yarn.lock
-
-# Environment variables
 .env
-.env.local
-.env.*.local
-
-# Build outputs
-dist/
-build/
-coverage/
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE and Editor files
-.idea/
-.vscode/
-*.swp
-*.swo
-.DS_Store
-Thumbs.db
-
-# Python (keeping your existing Python ignores)
 __pycache__/
 *.py[cod]
 .venv
-
-# Testing
-coverage/
-.nyc_output/
-
-# Optional: Misc
-.cache/
-.temp/
-.tmp/
+.DS_Store
+.vscode/
+.node_modules/
+.package-lock.json
+/react-app/node_modules/
