--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,7 @@ jobs:
       with:
         node-version: '20'
         cache: 'npm'
-        cache-dependency-path: |
-          react-app/package-lock.json
-          package-lock.json
+        cache-dependency-path: react-app/package-lock.json
 
     - name: Build React App
       working-directory: react-app
